--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.15.1", features = ["dynamic_linking"] }
+bevy = { version = "0.15.2" }
+rand = "0.9.0"
 
 
 # Enable a small amount of optimization in the dev profile.
