--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.15.2" }
+bevy = { version = "0.15.2", features = ["bevy_dev_tools"] }
 rand = "0.9.0"
 
 
