--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.15.2", features = ["bevy_dev_tools"] }
+bevy_ecs_tilemap = "0.15.0"
 rand = "0.9.0"
 
 
